--- a/index.html
+++ b/index.html
@@ -295,48 +295,19 @@
 
             function sudoku() {
                 var sudokuMsg  = "Tab through each box and enter a value.<br/>Press Enter to continue...<br/><table>";
-				var breakBar = " --------------------------<br/>"
                 for (i = 0; i < 9; i++) {
 					sudokuMsg += breakBar;
                     for (j = 0; j < 9; j++) {
-                        sudokuMsg += "|<input class='sudoku' type='text' id='sdk" + i + j + "'>";
+                        sudokuMsg += "<input class='sudoku' type='text' placeholder="_" id='sdk" + i + j + "'>";
                     }
-                    sudokuMsg += "|<br/>";
+                    sudokuMsg += "<br/>";
                 }
-				sudokuMsg += breakBar;
-				sudokuMsg += "<a href='#' onclick='sudokuSolve()'>Click here to solve...</a>";
+		sudokuMsg += "<a href='#' onclick='sudokuSolve()'>Click here to solve...</a>";
                 prln(sudokuMsg);
             }
 			
             function sudokuSolve() {
                 prln("feature not yet available");
-		var sudokuOut = "";
-		var x = [[4, 0, 0, 8, 3, 5, 0, 1, 0]
-			,[7, 3, 0, 0, 0, 2, 0, 0, 0]
-			,[6, 0, 5, 0, 0, 1, 0, 0, 3]
-			,[3, 0, 0, 2, 0, 0, 0, 5, 0]
-			,[9, 0, 7, 0, 0, 0, 6, 0, 2]
-			,[0, 2, 0, 0, 0, 9, 0, 0, 1]
-			,[5, 0, 0, 3, 0, 0, 1, 0, 4]
-			,[0, 0, 0, 5, 0, 0, 0, 6, 9]
-			,[0, 4, 0, 6, 1, 8, 0, 0, 7]];
-
-		var xC = new Array();
-
-		for (i = 0; i < 9; i++) {
-			for (j = 0; j < 9; j++) {
-			    if (x[i][j] == 0) xC.push([i,j]);
-			}
-		}
-
-		for (i = 0; i < xC.length; i++) {
-			[xC[i][0], xC[i][1]]
-		}
-
-		//(x[0,0]+x[0,1]+x[0,2]+x[0,3]+x[0,4]+x[0,5]+x[0,6]+x[0,7]+x[0,8]-45)(x[1,0]+x[1,1]+x[1,2]+x[1,3]+x[1,4]+x[1,5]+x[1,6]+x[1,7]+x[1,8]-45)(x[2,0]+x[2,1]+x[2,2]+x[2,3]+x[2,4]+x[2,5]+x[2,6]+x[2,7]+x[2,8]-45)(x[3,0]+x[3,1]+x[3,2]+x[3,3]+x[3,4]+x[3,5]+x[3,6]+x[3,7]+x[3,8]-45)(x[4,0]+x[4,1]+x[4,2]+x[4,3]+x[4,4]+x[4,5]+x[4,6]+x[4,7]+x[4,8]-45)(x[5,0]+x[5,1]+x[5,2]+x[5,3]+x[5,4]+x[5,5]+x[5,6]+x[5,7]+x[5,8]-45)(x[6,0]+x[6,1]+x[6,2]+x[6,3]+x[6,4]+x[6,5]+x[6,6]+x[6,7]+x[6,8]-45)(x[7,0]+x[7,1]+x[7,2]+x[7,3]+x[7,4]+x[7,5]+x[7,6]+x[7,7]+x[7,8]-45)(x[8,0]+x[8,1]+x[8,2]+x[8,3]+x[8,4]+x[8,5]+x[8,6]+x[8,7]+x[8,8]-45)(x[0,0]+x[1,0]+x[2,0]+x[3,0]+x[4,0]+x[5,0]+x[6,0]+x[7,0]+x[8,0]-45)(x[0,1]+x[1,1]+x[2,1]+x[3,1]+x[4,1]+x[5,1]+x[6,1]+x[7,1]+x[8,1]-45)(x[0,2]+x[1,2]+x[2,2]+x[3,2]+x[4,2]+x[5,2]+x[6,2]+x[7,2]+x[8,2]-45)(x[0,3]+x[1,3]+x[2,3]+x[3,3]+x[4,3]+x[5,3]+x[6,3]+x[7,3]+x[8,3]-45)(x[0,4]+x[1,4]+x[2,4]+x[3,4]+x[4,4]+x[5,4]+x[6,4]+x[7,4]+x[8,4]-45)(x[0,5]+x[1,5]+x[2,5]+x[3,5]+x[4,5]+x[5,5]+x[6,5]+x[7,5]+x[8,5]-45)(x[0,6]+x[1,6]+x[2,6]+x[3,6]+x[4,6]+x[5,6]+x[6,6]+x[7,6]+x[8,6]-45)(x[0,7]+x[1,7]+x[2,7]+x[3,7]+x[4,7]+x[5,7]+x[6,7]+x[7,7]+x[8,7]-45)(x[0,8]+x[1,8]+x[2,8]+x[3,8]+x[4,8]+x[5,8]+x[6,8]+x[7,8]+x[8,8]-45)(x[0,0]+x[0,1]+x[0,2]+x[1,0]+x[1,1]+x[1,2]+x[2,0]+x[2,1]+x[2,2]-45)(x[0,3]+x[0,4]+x[0,5]+x[1,3]+x[1,4]+x[1,5]+x[2,3]+x[2,4]+x[2,5]-45)(x[0,6]+x[0,7]+x[0,8]+x[1,6]+x[1,7]+x[1,8]+x[2,6]+x[2,7]+x[2,8]-45)(x[3,0]+x[3,1]+x[3,2]+x[4,0]+x[4,1]+x[4,2]+x[5,0]+x[5,1]+x[5,2]-45)(x[3,3]+x[3,4]+x[3,5]+x[4,3]+x[4,4]+x[4,5]+x[5,3]+x[5,4]+x[5,5]-45)(x[3,6]+x[3,7]+x[3,8]+x[4,6]+x[4,7]+x[4,8]+x[5,6]+x[5,7]+x[5,8]-45)(x[6,0]+x[6,1]+x[6,2]+x[7,0]+x[7,1]+x[7,2]+x[8,0]+x[8,1]+x[8,2]-45)(x[6,3]+x[6,4]+x[6,5]+x[7,3]+x[7,4]+x[7,5]+x[8,3]+x[8,4]+x[8,5]-45)(x[6,6]+x[6,7]+x[6,8]+x[7,6]+x[7,7]+x[7,8]+x[8,6]+x[8,7]+x[8,8]-45)=0
-
-		document.body = document.createElement("body");
-		$("body").append(sudokuOut);
             }
 			
             function visitor() {
