--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 for (i = 0; i < 9; i++) {
 					sudokuMsg += breakBar;
                     for (j = 0; j < 9; j++) {
-                        sudokuMsg += "<input class='sudoku' type='text' placeholder="_" id='sdk" + i + j + "'>";
+                        sudokuMsg += "<input class='sudoku' type='text' placeholder='_' id='sdk" + i + j + "'>";
                     }
                     sudokuMsg += "<br/>";
                 }
