--- a/index.html
+++ b/index.html
@@ -7,34 +7,35 @@
         <meta charset="utf-8" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=349"/>
         <title>Frank R. Castillo</title>
         <style>
-            body  { margin-bottom: 0px; margin-left: 0px; margin-right: 0px; margin-top: 0px;
-                    font-size: 11px; text-align: left; color: #ffa500; background-color: #000000;
-                    font-family: "Lucida Console", Monaco, monospace; text-shadow: 0px 0px 5px #ffa500; }
-            table { border-spacing: 0px; }
-            a  { color: #ffa500; text-decoration: none; }
-            p  { font-weight: normal; list-style: none outside none; padding: 5px 5px; }
-            ul { margin-top: 0; margin-bottom: 0; }
-            .fTle a { color: #ffa500 !important; word-wrap: break-word; }
-            .fLst   { list-style: none outside none; border: 0px; text-align: left; padding: 0px; }
-            #helpln { display: inline-block; width: 90px; }
-            #inputbox { width: 95%; border: 0px; background-color: #000000; color: #ffa500;
-                        font-family: "Lucida Console", Monaco, monospace; font-size: 11px; outline: none;
-                        text-shadow: 0px 0px 5px #ffa500; }
-            #xmark { color: #ffa500; animation: blink 1s infinite; }
-            @keyframes blink{ 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
-            #para { width: 740px; text-align: justify; }
-            #scrollback { padding: 5px; }
-            #profile { height: 105px; width: 105px; position: relative; float: left; padding: 0px 5px 0px 0px; 
-                       filter: grayscale(1) sepia(1) contrast(2) saturate(5) drop-shadow(0px 0px 10px #ffa500); }
-            .sudoku  { width: 12px; background-color: #000000; border: 0px; font-family: "Lucida Console", Monaco, monospace;
-					   font-size: 11px; color: #ffa500; text-align: center; }
-            #vstr { white-space: nowrap; }
-            @media only screen 
-                   and (max-width: 480px)
-                   and (max-device-width: 480px)
-                   and (orientation: portrait) {
-                       #para { width: auto; }
-            }
+	body  { margin-bottom: 0px; margin-left: 0px; margin-right: 0px; margin-top: 0px;
+		font-size: 11px; text-align: left; color: #ffa500; background-color: #000000;
+		font-family: "Lucida Console", Monaco, monospace; text-shadow: 0px 0px 5px #ffa500; }
+	table { border-spacing: 0px; }
+	a  { color: #ffa500; text-decoration: none; }
+	p  { font-weight: normal; list-style: none outside none; padding: 5px 5px; }
+	ul { margin-top: 0; margin-bottom: 0; }
+	.fTle a { color: #ffa500 !important; word-wrap: break-word; }
+	.fLst   { list-style: none outside none; border: 0px; text-align: left; padding: 0px; }
+	#helpln { display: inline-block; width: 90px; }
+	#inputbox { width: 95%; border: 0px; background-color: #000000; color: #ffa500;
+		font-family: "Lucida Console", Monaco, monospace; font-size: 11px; outline: none;
+		text-shadow: 0px 0px 5px #ffa500; }
+	#xmark { color: #ffa500; animation: blink 1s infinite; }
+	@keyframes blink{ 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
+	#para { width: 740px; text-align: justify; }
+	#scrollback { padding: 5px; }
+	#profile { height: 105px; width: 105px; position: relative; float: left; padding: 0px 5px 0px 0px; 
+		filter: grayscale(1) sepia(1) contrast(2) saturate(5) drop-shadow(0px 0px 10px #ffa500); }
+	.sudoku  { width: 16px; background-color: #000000; border: 0px; font-family: "Lucida Console", Monaco, monospace;
+		font-size: 11px; color: #ffa500; text-align: center; }
+	#vstr { white-space: nowrap; }
+	::placeholder { color: #ffa500; }
+	@media only screen 
+	   and (max-width: 480px)
+	   and (max-device-width: 480px)
+	   and (orientation: portrait) {
+	       #para { width: auto; }
+	}
         </style>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script>
