--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 			<meta charset="utf-8" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=349"/>
 			<title>Frank R. Castillo</title>
 			<style>
-                                body { font-family      : "Lucida Console", Monaco, monospace ;
-                                       text-shadow      : 0px 0px 5px #ffa500 ;
+                                html { font-family      : "Lucida Console", Monaco, monospace;
+                                       font-size        : 12px    ;
+                                     }
+                                     
+                                body { text-shadow      : 0px 0px 5px #ffa500;
                                        background-color : #000000 ;
                                        color            : #ffa500 ;
                                        margin-bottom    : 0px     ;
@@ -48,10 +51,11 @@
 
                                 #inputbox { font-family      : "Lucida Console", Monaco, monospace ;
                                             text-shadow      : 0px 0px 5px #ffa500 ;
+                                            border           : 0px      ;
                                             background-color : #000000  ;
+                                            font-size        : 12px     ;
                                             color            : #ffa500  ;
                                             outline          : none     ;
-                                            font-size        : 11px     ;
                                             border           : 0px      ;
                                             width            : 95%      ;
                                 }
@@ -60,7 +64,6 @@
                                           background-color : #000000    ;
                                           color            : #ffa500    ;
                                           outline          : none       ;
-                                          font-size        : 11px       ;
                                           width            : 16px       ;
                                           border           : 0px        ;
                                         }
@@ -75,7 +78,7 @@
                                                  }
 
                                 #para { text-align : justify;
-                                        width      : 740px  ;
+                                        width      : 720px  ;
                                       }
 
                                 #scrollback { padding: 5px; }
@@ -318,7 +321,7 @@
                                                  , feedUrl    : "https://medium.com/feed/thoughts-on-political-progress"
                                                  , pageUrl    : "https://medium.com/thoughts-on-political-progress"
                                                  , maxCount   : 10
-                                                 , charLimit  : 100
+                                                 , charLimit  : 88
                                                  , dateFormat : dteOpt
 					});
 
@@ -327,7 +330,7 @@
                                                  , feedUrl    : "https://twitrss.me/twitter_user_to_rss/?user=frankrcastillo"
                                                  , pageUrl    : "https://twitter.com/frankrcastillo"
                                                  , maxCount   : 10
-                                                 , charLimit  : 100
+                                                 , charLimit  : 88
                                                  , dateFormat : dteOpt
 					});
 
@@ -336,7 +339,7 @@
                                                  , feedUrl    : "https://www.youtube.com/feeds/videos.xml?channel_id=UC2h-iPOAKbCe1eo8aA-Zf4g"
                                                  , pageUrl    : "https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g?view_as=subscriber"
                                                  , maxCount   : 10
-                                                 , charLimit  : 100
+                                                 , charLimit  : 88
                                                  , dateFormat : dteOpt
 					});
 
