--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
                                         padding     : 0px               ;
                                       }
 				
-                                ::placeholder { color: #ffa500; }
-
                                 #helpln { display : inline-block ;
                                           width   : 90px         ;
                                         }
@@ -69,6 +67,9 @@
                                           width            : 16px       ;
                                           border           : 0px        ;
                                         }
+				
+				.sudoku::placeholder { color: #ffa500; }
+
 
                                 #xmark  { animation  : blink 1s infinite ;
                                           color      : #ffa500           ;
