--- a/index.html
+++ b/index.html
@@ -49,23 +49,25 @@
                                           width   : 90px         ;
                                         }
 
-                                #inputbox { font-family      : "Lucida Console", Monaco, monospace ;
+                                #inputbox { font-family      : "Lucida Console", Monaco, monospace;
                                             text-shadow      : 0px 0px 5px #ffa500 ;
-                                            border           : 0px      ;
-                                            background-color : #000000  ;
-                                            font-size        : 12px     ;
-                                            color            : #ffa500  ;
-                                            outline          : none     ;
-                                            border           : 0px      ;
-                                            width            : 95%      ;
-                                }
+                                            border           : 0px     ;
+                                            background-color : #000000 ;
+                                            font-size        : 12px    ;
+                                            color            : #ffa500 ;
+                                            outline          : none    ;
+                                            border           : 0px     ;
+                                            width            : 95%     ;
+                                	  }
 
-                                .sudoku { font-family      : "Lucida Console", Monaco, monospace ;
-                                          background-color : #000000    ;
-                                          color            : #ffa500    ;
-                                          outline          : none       ;
-                                          width            : 30px       ;
-                                          border           : 0px        ;
+                                .sudoku { font-family      : "Lucida Console", Monaco, monospace;
+				          text-shadow      : 0px 0px 5px #ffa500 ;
+                                          background-color : #000000 ;
+					  font-size        : 12px    ;
+                                          color            : #ffa500 ;
+                                          outline          : none    ;
+                                          width            : 30px    ;
+                                          border           : 0px     ;
                                         }
 				
 				.sudoku::placeholder { color: #ffa500; }
@@ -75,9 +77,8 @@
                                           color      : #ffa500           ;
                                         }
 
-                                @keyframes blink {
-                                              0% { opacity: 0.0 }
-                                            100% { opacity: 1.0 }
+                                @keyframes blink {  0% { opacity: 0.0 }
+						  100% { opacity: 1.0 }
                                                  }
 
                                 #para { text-align : justify;
@@ -87,11 +88,11 @@
                                 #scrollback { padding: 5px; }
 
                                 #profile { filter: grayscale(1) sepia(1) contrast(2) saturate(5) drop-shadow(0px 0px 10px #ffa500);
-                                           padding  : 0px 5px 0px 0px   ;
-                                           position : relative          ;
-                                           height   : 105px             ;
-                                           width    : 105px             ;
-                                           float    : left              ;
+                                           padding  : 0px 5px 0px 0px ;
+                                           position : relative        ;
+                                           height   : 105px           ;
+                                           width    : 105px           ;
+                                           float    : left            ;
                                          }
 
                                 #vstr { white-space: nowrap; }
@@ -370,7 +371,7 @@
 						}
 						sudokuMsg += "<br/>";
 					}
-					sudokuMsg += "<br/><a href='#' onclick='sudokuSolve()'>Click here to solve...</a><br/>";
+					sudokuMsg += "<br/>Click <a href='#' onclick='sudokuSolve()'><u>here</u></a> to solve...<br/>";
 					prln(true, sudokuMsg);
 				}
 	
