--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                                 .sudoku { font-family      : "Lucida Console", Monaco, monospace;
 				          text-shadow      : 0px 0px 5px #ffa500 ;
-					  border-bottom	   : 1px solid #ffa500
+					  border-bottom	   : 1px solid #ffa500   ;
                                           background-color : #000000 ;
 					  font-size        : 12px    ;
                                           color            : #ffa500 ;
